# ssl-for-ood-molecules

./: .gitignore  README.md  pyproject.toml
notebooks/: explore_data.ipynb
src/ssl_for_ood/data/: io.py
