[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssl-for-ood-molecules"
version = "0.1.0"
description = "Evaluating self-supervised learning methods for out-of-distribution domain shift in 3 molecular datasets"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}
